--- a/configure.in
+++ b/configure.in
@@ -189,6 +189,10 @@ if test x"$CFLAGS" = x"-g -O2"; then
   CFLAGS=
 fi
 
+if test x"$CXXFLAGS" = x"-g -O2"; then
+  CXXFLAGS=
+fi
+
 CFLAGS="-ffast-math -pipe $CFLAGS"
 
 DFB_INTERNAL_CFLAGS="-D_GNU_SOURCE $DFB_INTERNAL_CFLAGS"
@@ -199,6 +203,7 @@ AC_ARG_ENABLE(extra-warnings,
               [], [enable_extra_warnings=no])
 if test "$enable_extra_warnings" = "yes"; then
   CFLAGS="-W -Wno-sign-compare -Wno-unused-parameter -Wundef -Wcast-qual -Wcast-align -Waggregate-return -Wmissing-declarations -Winline $CFLAGS"
+  CXXFLAGS="-W -Wno-sign-compare -Wno-unused-parameter -Wundef -Wcast-qual -Wcast-align -Waggregate-return -Wmissing-declarations -Winline $CXXFLAGS"
 fi
 
 # FIXME
@@ -446,7 +451,7 @@ AC_ARG_ENABLE(profiling,
                              [enable profiling support @<:@default=no@:>@]),
               [], [enable_profiling=no])
 if test "$enable_profiling" = "yes"; then
-    CFLAGS="$CFLAGS -pg -g3"
+    CFLAGS="$CFLAGS -pg -g"
 else
     DFB_CFLAGS_OMIT_FRAME_POINTER="-fomit-frame-pointer"
 fi
@@ -457,7 +462,8 @@ AC_ARG_ENABLE(debug,
                              [enable debugging @<:@default=no@:>@]),
               [], [enable_debug=no])
 if test "$enable_debug" = "yes"; then
-    CFLAGS="-g3 -O0 -fno-inline -Wno-inline $CFLAGS"
+    CFLAGS="-g -fno-inline -Wno-inline $CFLAGS"
+    CXXFLAGS="-g -fno-inline -Wno-inline $CXXFLAGS"
     DIRECT_BUILD_DEBUG=1
 else
     DIRECT_BUILD_DEBUG=0
@@ -475,11 +481,13 @@ if test "$enable_debug_support" = "yes" || test "$enable_debug" = "yes"; then
     enable_debug_support=yes
     if test "$enable_debug" = "no"; then
         CFLAGS="-g2 $CFLAGS"
+        CXXFLAGS="-g2 $CXXFLAGS"
     fi
-    CFLAGS="-O2 $CFLAGS"
+    ##CFLAGS="-O2 $CFLAGS"
     DIRECT_BUILD_DEBUGS=1
 else
-    CFLAGS="-O2 -g0 $CFLAGS"
+    CFLAGS="-g0 -O2 $CFLAGS"
+    CXXFLAGS="-g0 -O2 $CXXFLAGS"
     DIRECT_BUILD_DEBUGS=0
 fi
 AM_CONDITIONAL(ENABLE_DEBUGS, test "$enable_debug_support" = "yes")
@@ -2280,6 +2288,7 @@ Build options:
   Module directory          $MODULEDIR
   CPPFLAGS                  $CPPFLAGS
   CFLAGS                    $CFLAGS
+  CXXFLAGS                  $CXXFLAGS
   LDFLAGS                   $LDFLAGS
   LIBS                      $LIBS
   DYNLIB                    $DYNLIB
