--- a/configure.in
+++ b/configure.in
@@ -483,8 +483,8 @@ AC_ARG_ENABLE(debug-support,
 if test "$enable_debug_support" = "yes" || test "$enable_debug" = "yes"; then
     enable_debug_support=yes
     if test "$enable_debug" = "no"; then
-        CFLAGS="-g2 $CFLAGS"
-        #CXXFLAGS="-g2 $CXXFLAGS"
+        CFLAGS="-g $CFLAGS"
+        #CXXFLAGS="-g $CXXFLAGS"
     fi
     ##CFLAGS="-O2 $CFLAGS"
     DIRECT_BUILD_DEBUGS=1
